[project]
name = "flask-purple-powerbase"
version = "0.1.0"
description = "Purple bed control API for Homebridge"
authors = [
    {name = "Nick Rosener",email = "nick@nickrosener.co"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "bluepy (>=1.3.0,<2.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
pytest = "^8.4.1"
pre-commit = "^4.2.0"



[tool.ruff]
select = ["ALL"]
line-length = 110
